# teslalarm-kr

./: .dockerignore  .env.example  .env.test  .gitignore  .mergify.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  fly.toml  format_files_to_yaml.py  pyproject.toml  renovate.json  requirements.txt  run.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labeler.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  codeql.yml  lint.yml  test.yml
analyzers/: data_analyzer.py  nlp_processor.py  similarity_checker.py  trust_evaluator.py
database/: db_manager.py  models.py
scrapers/: data_fetcher.py  electrek_scraper.py  global_news_scraper.py  global_news_scrapper.py  insideevs_scraper.py  korean_news_scraper.py  korean_news_scrapper.py  tesla_extra_scraper.py  tesla_official_scraper.py  tesla_scraper.py
static/: app.js  index.html
telegram_bot/: bot.py  command_handler.py  message_formatter.py  message_sender.py  subscription_manager.py  user_settings.py
tests/: conftest.py  test_async_utils.py  test_bot.py  test_cache.py  test_command_handler.py  test_data_fetcher.py  test_db_manager.py  test_logger.py  test_message_formatter.py  test_message_sender.py  test_run.py
tests/integration/: test_integration.py
utils/: async_utils.py  cache.py  logger.py  storage.py
web/: app.py
web/static/css/: main.css
web/static/js/: bundle.js
web/templates/: index.html
